[project]
name = "warp-bot"
version = "0.1.0"
description = "Telegram bot for generating Cloudflare WARP WireGuard and Xray outbound configs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
